# bandcamp-downloader

./: pyproject.toml
bandcamp_downloader/: bandcamp_downloader.py
